--- a/design-agency/css/style.css
+++ b/design-agency/css/style.css
@@ -271,11 +271,11 @@ ul {
 }
 
 .bg-yellow {
-    background-color: #dabf07;
+    background-color: #ECE381;
 }
 
 .bg-green {
-    background-color: #9cc11a;
+    background-color: #62CCA5;
 }
 
 
